# honse_flask_app

./: .gitignore  .replit  README.md  analyse_art.py  art.py  draw_honse.py  honse_flask_app.py  pyproject.toml
static/images/: honse_13336.json  honse_16704.json  honse_18346.json  honse_19628.json  honse_25411.json  honse_29303.json  honse_30396.json  honse_30529.json  honse_33153.json  honse_33562.json  honse_36737.json  honse_39051.json  honse_45215.json  honse_49076.json  honse_53046.json  honse_54079.json  honse_57106.json  honse_58315.json  honse_59631.json  honse_65752.json  honse_68100.json  honse_70679.json  honse_80006.json  honse_80241.json  honse_81404.json  honse_84858.json  honse_88292.json  honse_93352.json  honse_93866.json
templates/: index.html
